tests/snippets/invalid_snippets/unsupported_language.snippet
<!
  (
    "log",
    title="Log Message",
    description="Logs a Message to the console",
    ```unknown console.log("Hello world")```
  )
>
